vlib/v/checker/tests/var_decl_import_sym_conflict.out
vlib/v/checker/tests/var_decl_import_sym_conflict.vv:1:8: warning: module 'arrays' is imported but never used. Use `import arrays as _`, to silence this warning, or just remove the unused import line
    1 | import arrays
      |        ~~~~~~
    2 | 
    3 | fn x() {
vlib/v/checker/tests/var_decl_import_sym_conflict.vv:4:2: warning: unused variable: `arrays`
    2 | 
    3 | fn x() {
    4 |     arrays := 1
      |     ~~~~~~
    5 | }
vlib/v/checker/tests/var_decl_import_sym_conflict.vv:4:2: error: duplicate of an import symbol `arrays`
    2 | 
    3 | fn x() {
    4 |     arrays := 1
      |     ~~~~~~
    5 | }
